--- a/Driftservice-Registration/Driftservice-Registration/Web.config
+++ b/Driftservice-Registration/Driftservice-Registration/Web.config
@@ -15,8 +15,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
     <add key="UnregisterLink" value="http://localhost:2972/Unregistration/Index?Contact=" />
-    <add key="LinkToAdminContact" value="http://localhost:3861/Contact"/>
-    <add key="MailAdressToHelpDesk" value="simonhansson.86@gmail.com"/>
+    <add key="LinkToAdminContact" value="http://localhost:3861/Contact" />
+    <add key="MailAdressToHelpDesk" value="simonhansson.86@gmail.com" />
+    <add key="reCaptchaPublicKey" value="6LdLZ0UUAAAAAA2fn3RcrR1dUDBN0MBvyaNf9rIg" />
+    <add key="reCaptchaPrivateKey" value="6LdLZ0UUAAAAAJP2AribZuG-6mhm53llKzkTuqsL" />
     
   </appSettings>
   <system.web>
@@ -50,7 +52,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -74,7 +76,7 @@
     </providers>
   </entityFramework>
  <connectionStrings>
-  <add providerName="System.Data.SqlClient" name="DriftServiceDb" connectionString="Data Source=E650G1-16007\SQLEXPRESS; Initial Catalog=DriftServiceDb;Integrated Security=True;"/>
+  <add providerName="System.Data.SqlClient" name="DriftServiceDb" connectionString="Data Source=E650G1-16007\SQLEXPRESS; Initial Catalog=DriftServiceDb;Integrated Security=True;" />
  </connectionStrings>
 
   <system.net>
